Reactored serie F to use AssertJ